horizontal scroll bar fixed on moz

--- a/client/web-app/styles/custom.css
+++ b/client/web-app/styles/custom.css
@@ -28,6 +28,15 @@
 .navbar-default .navbar-toggle {
   border-width: 2px; }
 
+.sync-scroll {
+  overflow: auto; }
+
+.guide-header::-webkit-scrollbar {
+  display: none; }
+
+.guide-header {
+  overflow: hidden; }
+
 #menuBar input[type="radio"] {
   display: none; }
 
